Updated Form, design

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,6 +6,8 @@
   "registration_button": "Sign up",
   "login": "Log in",
   "verify": "Confirm your email",
+  "formTitle": "Your family asset is under professional management",
+  "fromUnderTitle": "It all starts with registration",
   "confirm": "Confirm",
   "resendCode": "Send a code one more time",
   "code": "Code",
