--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,6 +5,8 @@
   "registration": "Регистрация",
   "registration_button": "Зарегистрироваться",
   "login": "Войти",
+  "formTitle": "Ваш фамильный актив — под профессиональным управлением",
+  "fromUnderTitle": "Всё начинается с регистрации",
   "verify": "Подтвердите почту",
   "code": "Код из письма",
   "confirm": "Подтвердить",
