--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -17,5 +17,7 @@
   "userPassword": "Создайте пароль",
   "userPasswordLogin": "Ваш пароль",
   "userRepPassword": "Повторите пароль",
-  "userHasAnAccount": "У меня уже есть аккаунт"
+  "userHasAnAccount": "У меня уже есть аккаунт",
+  "successTitle": "До встречи на вашей будущей плантации!",
+  "successUnderTitle": "Ваши ответы помогут нам предложить вам наиболее подходящий формат участия. Мы свяжемся с вами в ближайшее время и предоставим подробную информацию по следующему шагу"
 }
