Added mobile adaptation to Form

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,6 +4,7 @@
   "lng": "ENG",
   "registration": "Sign up",
   "registration_button": "Sign up",
+  "log_button": "I don't have an account",
   "login": "Log in",
   "verify": "Confirm your email",
   "formTitle": "Your family asset is under professional management",
