--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,6 +4,7 @@
   "lng": "RU",
   "registration": "Регистрация",
   "registration_button": "Зарегистрироваться",
+  "log_button": "У вас еще нету аккаунта?",
   "login": "Войти",
   "formTitle": "Ваш фамильный актив — под профессиональным управлением",
   "fromUnderTitle": "Всё начинается с регистрации",
