Updated mobile adaptation to Home page, also added error component

--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -2,7 +2,7 @@
   "wave": "«在喬治亞，通往獲利橄欖生意與豪華房地產之路»",
   "goInClub": "加入俱樂部",
   "lng": "中文",
-  "registration": "'報名'",
+  "registration": "報名",
   "registration_button": "報名",
   "log_button": "我沒有帳戶",
   "login": "登入",
