Removed bugs, added transcription, added new value to userScheme

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -15,6 +15,7 @@
   "userFirstName": "Your first name",
   "userLastName": "Your last name",
   "userMail": "Your e-mail",
+  "userPhone": "Your phone number",
   "userPassword": "Create a password",
   "userPasswordLogin": "Your password",
   "userRepPassword": "Repeat your password",
