--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -15,6 +15,7 @@
   "userFirstName": "Ваше имя",
   "userLastName": "Ваша фамилия",
   "userMail": "Ваша почта",
+  "userPhone": "Ваш номер телефона",
   "userPassword": "Создайте пароль",
   "userPasswordLogin": "Ваш пароль",
   "userRepPassword": "Повторите пароль",
