--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,5 @@
 {
-  "wave": "«Ваш путь к прибыльному оливковому бизнесу и элитной недвижимости в Грузии»",
+  "wave": "«Ваш путь к прибыльному оливковому бизнесу и элитной недвижимости»",
   "goInClub": "Вступить в клуб",
   "lng": "RU",
   "registration": "Регистрация",
@@ -7,8 +7,10 @@
   "log_button": "У вас еще нету аккаунта?",
   "login": "Войти",
   "formTitle": "Ваш фамильный актив — под профессиональным управлением",
-  "fromUnderTitle": "Всё начинается с регистрации",
+  "formUnderTitle": "Всё начинается с регистрации",
   "verify": "Подтвердите почту",
+  "verifyResendMessage": "Код отправлен повторно",
+  "verifyResendMessageError": "Ошибка при отправке кода",
   "code": "Код из письма",
   "confirm": "Подтвердить",
   "resendCode": "Отправить код ещё раз",
