--- a/public/locales/sa/translation.json
+++ b/public/locales/sa/translation.json
@@ -1,5 +1,5 @@
 {
-  "wave": "«طريقك نحو عمل زيتون مربح وعقارات فاخرة في جورجيا»",
+  "wave": "«الطريق إلى تجارة الزيتون المربحة والعقارات الفاخرة»",
   "goInClub": "انضم إلى النادي",
   "lng": "SA",
   "registration": "سجّل الآن",
@@ -7,8 +7,10 @@
   "log_button": "ليس لدي حساب",
   "login": "تسجيل الدخول",
   "verify": "أكد بريدك الإلكتروني",
+  "verifyResendMessage": "تمت إعادة الرمز",
+  "verifyResendMessageError": "حدث خطأ أثناء إرسال الرمز",
   "formTitle": "أصول عائلتك تحت إدارة احترافية",
-  "fromUnderTitle": "كل شيء يبدأ بالتسجيل",
+  "formUnderTitle": "كل شيء يبدأ بالتسجيل",
   "confirm": "تأكيد",
   "resendCode": "إرسال الرمز مرة أخرى",
   "code": "الرمز",
