Added Privacy page and Scroll bar

--- a/public/locales/cn/translation.json
+++ b/public/locales/cn/translation.json
@@ -10,6 +10,7 @@
   "verifyResendMessage": "代碼已重新發送",
   "verifyResendMessageError": "發送代碼時出錯",
   "formTitle": "您的家族资产由专业团队管理",
+  "loginTitle": "Family Olive Club 是那些目光長遠的人的選擇。",
   "formUnderTitle": "一切从注册开始",
   "confirm": "确认",
   "resendCode": "重新发送验证码",
