--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,6 +10,7 @@
   "verifyResendMessage": "Code resent",
   "verifyResendMessageError": "Error sending code",
   "formTitle": "Your family asset is under professional management",
+  "loginTitle": "Family Olive Club is the choice of those who look beyond the horizon.",
   "formUnderTitle": "It all starts with registration",
   "confirm": "Confirm",
   "resendCode": "Send a code one more time",
