--- a/public/locales/sa/translation.json
+++ b/public/locales/sa/translation.json
@@ -10,6 +10,7 @@
   "verifyResendMessage": "تمت إعادة الرمز",
   "verifyResendMessageError": "حدث خطأ أثناء إرسال الرمز",
   "formTitle": "أصول عائلتك تحت إدارة احترافية",
+  "loginTitle": "يعد نادي الزيتون العائلي هو الاختيار الأمثل لأولئك الذين يتطلعون إلى ما وراء الأفق.",
   "formUnderTitle": "كل شيء يبدأ بالتسجيل",
   "confirm": "تأكيد",
   "resendCode": "إرسال الرمز مرة أخرى",
