--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,6 +7,7 @@
   "log_button": "У вас еще нету аккаунта?",
   "login": "Войти",
   "formTitle": "Ваш фамильный актив — под профессиональным управлением",
+  "loginTitle": "Family Olive Club — выбор тех, кто смотрит дальше горизонта.",
   "formUnderTitle": "Всё начинается с регистрации",
   "verify": "Подтвердите почту",
   "verifyResendMessage": "Код отправлен повторно",
