Added new function for recover password

--- a/public/locales/cn/translation.json
+++ b/public/locales/cn/translation.json
@@ -5,6 +5,7 @@
   "registration": "注册",
   "registration_button": "注册",
   "log_button": "我还没有账户",
+  "rec_pass": "密碼恢復",
   "login": "登录",
   "verify": "请确认您的邮箱",
   "verifyResendMessage": "代碼已重新發送",
@@ -14,12 +15,15 @@
   "formUnderTitle": "一切从注册开始",
   "confirm": "确认",
   "resendCode": "重新发送验证码",
+  "sendCode": "傳送代碼",
   "code": "验证码",
   "userFirstName": "您的名字",
   "userLastName": "您的姓氏",
   "userMail": "您的电子邮箱",
   "userPhone": "您的電話號碼",
   "userPassword": "创建密码",
+  "userNewPassword": "建立新密碼",
+  "userSetNewPassword": "設定新密碼",
   "userPasswordLogin": "您的密码",
   "userRepPassword": "重复密码",
   "userHasAnAccount": "我已有账户",
