--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,6 +6,7 @@
   "registration_button": "Sign up",
   "log_button": "I don't have an account",
   "login": "Log in",
+  "rec_pass": "Password recovery",
   "verify": "Confirm your email",
   "verifyResendMessage": "Code resent",
   "verifyResendMessageError": "Error sending code",
@@ -14,12 +15,15 @@
   "formUnderTitle": "It all starts with registration",
   "confirm": "Confirm",
   "resendCode": "Send a code one more time",
+  "sendCode": "Send a code",
   "code": "Code",
   "userFirstName": "Your first name",
   "userLastName": "Your last name",
   "userMail": "Your e-mail",
   "userPhone": "Your phone number",
   "userPassword": "Create a password",
+  "userNewPassword": "Create a new password",
+  "userSetNewPassword": "Set a new password",
   "userPasswordLogin": "Your password",
   "userRepPassword": "Repeat your password",
   "userHasAnAccount": "I have an account",
