--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,6 +6,7 @@
   "registration_button": "Зарегистрироваться",
   "log_button": "У вас еще нету аккаунта?",
   "login": "Войти",
+  "rec_pass": "Восстановление пароля",
   "formTitle": "Ваш фамильный актив — под профессиональным управлением",
   "loginTitle": "Family Olive Club — выбор тех, кто смотрит дальше горизонта.",
   "formUnderTitle": "Всё начинается с регистрации",
@@ -15,11 +16,14 @@
   "code": "Код из письма",
   "confirm": "Подтвердить",
   "resendCode": "Отправить код ещё раз",
+  "sendCode": "Отправить код",
   "userFirstName": "Ваше имя",
   "userLastName": "Ваша фамилия",
   "userMail": "Ваша почта",
   "userPhone": "Ваш номер телефона",
   "userPassword": "Создайте пароль",
+  "userNewPassword": "Создайте новый пароль",
+  "userSetNewPassword": "Установить новый пароль",
   "userPasswordLogin": "Ваш пароль",
   "userRepPassword": "Повторите пароль",
   "userHasAnAccount": "У меня уже есть аккаунт",
