--- a/public/locales/sa/translation.json
+++ b/public/locales/sa/translation.json
@@ -6,6 +6,7 @@
   "registration_button": "سجّل الآن",
   "log_button": "ليس لدي حساب",
   "login": "تسجيل الدخول",
+  "rec_pass": "استعادة كلمة المرور",
   "verify": "أكد بريدك الإلكتروني",
   "verifyResendMessage": "تمت إعادة الرمز",
   "verifyResendMessageError": "حدث خطأ أثناء إرسال الرمز",
@@ -14,12 +15,15 @@
   "formUnderTitle": "كل شيء يبدأ بالتسجيل",
   "confirm": "تأكيد",
   "resendCode": "إرسال الرمز مرة أخرى",
+  "sendCode": "إرسال الرمز",
   "code": "الرمز",
   "userFirstName": "الاسم الأول",
   "userLastName": "اسم العائلة",
   "userMail": "بريدك الإلكتروني",
   "userPhone": "رقم هاتفك",
   "userPassword": "أنشئ كلمة مرور",
+  "userNewPassword": "إنشاء كلمة مرور جديدة",
+  "userSetNewPassword": "تعيين كلمة مرور جديدة",
   "userPasswordLogin": "كلمة المرور",
   "userRepPassword": "أعد كتابة كلمة المرور",
   "userHasAnAccount": "لدي حساب",
