--- a/public/locales/cn/translation.json
+++ b/public/locales/cn/translation.json
@@ -29,5 +29,55 @@
   "userHasAnAccount": "我已有账户",
   "successTitle": "我们在您未来的种植园等您！",
   "successUnderTitle": "您的回答将帮助我们为您推荐最合适的参与方式。我们将尽快与您联系，提供下一步的详细信息。",
-  "successCloseButton": "完全的"
+  "successCloseButton": "完全的",
+  "surveyPrev": "上一個",
+  "surveyNext": "下一個",
+  "surveyEnd": "結束",
+  "surveySkip": "跳過",
+  "surveySend": "傳送...",
+  "surveyParticipationHint": "選擇適當的參與模式",
+  "surveyQuestions": [
+    {
+      "question": "您考慮的預算大概是多少？",
+      "options": ["最高50萬美元", "50萬-100萬美元", "100萬-300萬美元", "300萬美元以上"]
+    },
+    {
+      "question": "哪一種參與形式較符合您的風格和策略？私人參與/直接所有權",
+      "options": [
+        "透過家族辦公室",
+        "注重影響力和永續性",
+        "透過Web3/數位資本",
+        "透過信託管理",
+        "我正在研究這種形式，想了解更多資訊"
+      ]
+    },
+    {
+      "question": "您參與的主要目標是什麼？",
+      "options": [
+        "從實物資產中獲得長期收益",
+        "遺產轉移",
+        "獲得居留許可或公民身份",
+        "資本多元化",
+        "自有品牌油",
+        "農產品出口或業務擴張"
+      ]
+    },
+    {
+      "question": "您是否有參與下列專案的經驗：",
+      "options": [
+        "土地/農業",
+        "生態房地產",
+        "另類資產（葡萄酒、藝術品、起司等）",
+        "沒有 - 這對我來說是一種全新的模式"
+      ]
+    },
+    {
+      "question": "您距離那種以高獲利、尊重、連續性和世代傳承策略為基礎的企業模式還有多遠？",
+      "options": [
+        "我完全認同這個理念",
+        "我想了解更多",
+        "我不確定（也許這種模式不適合您）"
+      ]
+    }
+  ]
 }
