--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -29,5 +29,34 @@
   "userHasAnAccount": "У меня уже есть аккаунт",
   "successTitle": "Спасибо за регистрацию",
   "successUnderTitle": "Доступ будет предоставлен после подтверждения заявки",
-  "successCloseButton": "Завершить"
+  "successCloseButton": "Завершить",
+  "surveyPrev": "Предыдущий",
+  "surveyNext": "Следующий",
+  "surveyEnd": "Завершить",
+  "surveySkip": "Пропустить",
+  "surveySend": "Отправка...",
+  "surveyQuestions": [
+    {
+      "question": "Какой ориентировочный бюджет вы рассматриваете?",
+      "options": ["До $500,000", "$500,000 – $1,000,000", "$1,000,000 – $3,000,000", "$3,000,000 и выше"]
+    },
+    {
+      "question": "Какой формат участия вам ближе по стилю и стратегии? Частное участие / владение напрямую",
+
+      "options": ["Через семейный офис", "C акцентом на влияние и устойчивое развитие", "Через Web3 / цифровой капитал", "Через доверительное управление", "Я исследую формат и хочу понять больше"]
+    },
+    {
+      "question": "Какова ваша основная цель участия?",
+      "options": ["Долгосрочный доход с реального актива", "Передача наследия", "Получение ВНЖ или гражданства", "Диверсификация капитала", "Собственный бренд масла", " Агроэкспорт или расширение бизнеса"]
+    },
+    {
+      "question": "Вы когда-либо имели опыт участия в проектах, связанных с:",
+      "options": ["Землёй / сельским хозяйством", "Эко-недвижимостью", "Альтернативными активами (вино, арт, сыр и др.)", "Нет — это будет новый формат для меня"]
+    },
+    {
+      "question": "Насколько вам близок формат, где бизнес строится на высокой доходности, уважении, преемственности и стратегии, рассчитанной на поколения?",
+      "options": ["Полностью разделяю философию", "Хочу узнать больше", "Не уверен (возможно, формат вам не подойдёт)"]
+    }
+  ],
+  "surveyParticipationHint": "Выберите подходящий формат участия"
 }
