--- a/public/locales/sa/translation.json
+++ b/public/locales/sa/translation.json
@@ -29,5 +29,55 @@
   "userHasAnAccount": "لدي حساب",
   "successTitle": "نراك في مزرعتك المستقبلية!",
   "successUnderTitle": "إجاباتك ستساعدنا في تقديم أنسب صيغة للمشاركة. سنتواصل معك قريبًا بمزيد من التفاصيل حول الخطوة التالية.",
-  "successCloseButton": "مكتمل"
+  "successCloseButton": "مكتمل",
+  "surveyPrev": "سابق",
+  "surveyNext": "التالي",
+  "surveyEnd": "ينهي",
+  "surveySkip": "يتخطى",
+  "surveySend": "جارٍ الإرسال...",
+  "surveyParticipationHint": "اختر نوع المشاركة المناسب",
+  "surveyQuestions": [
+    {
+      "question": "ما هو نطاق الميزانية الذي تفكر فيه؟",
+      "options": ["حتى 500,000 دولار", "500,000 - 1,000,000 دولار", "1,000,000 - 3,000,000 دولار", "أكثر من 3,000,000 دولار"]
+    },
+    {
+      "question": "ما نوع المشاركة التي تتناسب مع أسلوبك واستراتيجيتك؟ (مشاركة خاصة / ملكية مباشرة)",
+      "options": [
+        "عبر مكتب عائلي",
+        "التركيز على التأثير والاستدامة",
+        "من خلال Web3 / الأصول الرقمية",
+        "عبر إدارة صناديق استئمانية",
+        "أقوم بالبحث عن هذا النوع وأرغب في معرفة المزيد"
+      ]
+    },
+    {
+      "question": "ما هو هدفك الرئيسي من المشاركة؟",
+      "options": [
+        "تحقيق عوائد طويلة الأجل من الأصول المادية",
+        "نقل الثروة عبر الأجيال",
+        "الحصول على إقامة أو جنسية",
+        "تنويع رأس المال",
+        "منتج زيت بعلامتي التجارية",
+        "تصدير المنتجات الزراعية أو توسيع الأعمال"
+      ]
+    },
+    {
+      "question": "هل لديك خبرة في أي من المشاريع التالية؟",
+      "options": [
+        "الأراضي / الزراعة",
+        "العقارات البيئية",
+        "الأصول البديلة (مثل النبيذ، الفن، الجبن، إلخ)",
+        "لا - هذا نهج جديد تماماً بالنسبة لي"
+      ]
+    },
+    {
+      "question": "ما مدى قربك من نموذج عمل يقوم على الربحية العالية، والاحترام، والاستمرارية، وانتقال الثروة عبر الأجيال؟",
+      "options": [
+        "أنا أؤمن تماماً بهذا النموذج",
+        "أرغب في معرفة المزيد",
+        "لست متأكداً (ربما هذا النموذج لا يناسبني)"
+      ]
+    }
+  ]
 }
