--- a/public/locales/cn/translation.json
+++ b/public/locales/cn/translation.json
@@ -5,7 +5,7 @@
   "registration": "注册",
   "registration_button": "注册",
   "log_button": "我还没有账户",
-  "rec_pass": "密碼恢復",
+  "rec_pass": "忘記密碼了嗎？",
   "login": "登录",
   "verify": "请确认您的邮箱",
   "verifyResendMessage": "代碼已重新發送",
