--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,7 +6,7 @@
   "registration_button": "Зарегистрироваться",
   "log_button": "У вас еще нету аккаунта?",
   "login": "Войти",
-  "rec_pass": "Восстановление пароля",
+  "rec_pass": "Забыли пароль?",
   "formTitle": "Ваш фамильный актив — под профессиональным управлением",
   "loginTitle": "Family Olive Club — выбор тех, кто смотрит дальше горизонта.",
   "formUnderTitle": "Всё начинается с регистрации",
